# Mobileye_Python_way_CICD

./: .gitignore  .yamllint  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  Readme.md  TASK_AND_SOLUTION_DESCRIPTION.md  architecture.txt  bandit-report.json  docker-compose.yml  product_pipeline.py  pylintrc  pyproject.toml  requirements-prod.txt  requirements.txt  security_placeholder.md  setup.py  tox.ini  user_guide.md
.github/workflows/: ci.yml
code-quality/: .flake8  .pre-commit-config.yaml  README.md  requirements-dev.txt
config/: config.yaml  env.example
docs/: README.md  api.md  architecture.md  code-quality.md  docker-best-practices.md  docker-compose-best-practices.md  functionality-test-summary.md  naming-conventions-summary.md  naming-conventions.md  project-structure-analysis.md  restructure-completion-summary.md  structure-recommendations.md
notifications/: email_channel.py  slack_channel.py
pipelines/: pipeline.py
repositories/: artifactory.py  nexus.py  s3.py
scripts/: cleanup.py  fix_imports.py  fix_naming_conventions.py  restructure_project.py
src/: README.md  __init__.py
src/product_pipeline/: main.py
src/product_pipeline/core/: pipeline.py
src/product_pipeline/notifications/: base.py  email.py  slack.py
src/product_pipeline/repositories/: artifactory.py  base.py  nexus.py  s3.py
src/product_pipeline/stages/: clone.py  deploy.py  notify.py
src/product_pipeline/utils/: config.py  helpers.py  logging.py
stages_placeholder/: integration_test.py
tests/unit/: test_main.py  test_notifications.py  test_pipeline.py  test_repositories.py  test_utils.py
unit_test_PyTest/: Readme_test.md  test_config_loader.py  test_integration_pipeline.py  test_notifications.py  test_pipeline.py  test_repositories.py
utils_py/: config_helper.py  config_loader.py
